--- a/pom.xml
+++ b/pom.xml
@@ -196,7 +196,7 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-      <version>2.4.6-jenkins-1</version>
+      <version>2.4.21</version>
       <optional>true</optional>
     </dependency>
     <dependency>
