--- a/pom.xml
+++ b/pom.xml
@@ -225,9 +225,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>xmlunit</groupId>
-      <artifactId>xmlunit</artifactId>
-      <version>1.6</version>
+      <groupId>org.xmlunit</groupId>
+      <artifactId>xmlunit-legacy</artifactId>
+      <version>2.9.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
