--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.kohsuke.stapler</groupId>
   <artifactId>json-lib</artifactId>
-  <version>2.4-jenkins-12</version>
+  <version>${revision}${changelist}</version>
   <name>json-lib</name>
   <description>Java library for transforming beans, maps, collections, java arrays and XML to JSON.</description>
   <url>https://json-lib.sourceforge.net</url>
@@ -127,7 +127,7 @@
   <scm>
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
-    <tag>json-lib-2.4-jenkins-12</tag>
+    <tag>${scmTag}</tag>
     <url>https://github.com/${gitHubRepo}</url>
   </scm>
 
@@ -137,7 +137,7 @@
   </issueManagement>
 
   <properties>
-    <revision>2.4-jenkins-12</revision>
+    <revision>2.4-jenkins-13</revision>
     <changelist>-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/${project.artifactId}</gitHubRepo>
     <!-- TODO fix existing violations -->
