Ban JUnit 4 imports

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
     <!-- TODO fix existing violations -->
     <spotbugs.threshold>High</spotbugs.threshold>
     <spotless.check.skip>false</spotless.check.skip>
+    <ban-junit4-imports.skip>false</ban-junit4-imports.skip>
   </properties>
 
   <dependencies>
